2013-04-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add IO symbol definitions to crt*.o files:
	* devtools/ioreg.pl: Emit a DIE for uint32_t if needed.
	* devtools/generate_iosym.sh: New file.
	* devtools/Device.am (AVRLIB_ASFLAGS): Pass name of iosym/*.S
	include file as a -D option when compiling gcrt1.o.
	* crt1/gcrt1.S: Include IOSYMFILE
	* crt1/iosym: New directory.
	* crt1/iosym/template.S: Empty template to use for devices where
	there is no actual IO symbol definition file.
	* crt1/iosym/at43usb320.S: New file.
	* crt1/iosym/at43usb355.S: (Dito.)
	* crt1/iosym/at76c711.S: (Dito.)
	* crt1/iosym/at86rf401.S: (Dito.)
	* crt1/iosym/at90c8534.S: (Dito.)
	* crt1/iosym/at90can128.S: (Dito.)
	* crt1/iosym/at90can32.S: (Dito.)
	* crt1/iosym/at90can64.S: (Dito.)
	* crt1/iosym/at90pwm1.S: (Dito.)
	* crt1/iosym/at90pwm2.S: (Dito.)
	* crt1/iosym/at90pwm216.S: (Dito.)
	* crt1/iosym/at90pwm2b.S: (Dito.)
	* crt1/iosym/at90pwm3.S: (Dito.)
	* crt1/iosym/at90pwm316.S: (Dito.)
	* crt1/iosym/at90pwm3b.S: (Dito.)
	* crt1/iosym/at90pwm81.S: (Dito.)
	* crt1/iosym/at90s1200.S: (Dito.)
	* crt1/iosym/at90s2313.S: (Dito.)
	* crt1/iosym/at90s2323.S: (Dito.)
	* crt1/iosym/at90s2333.S: (Dito.)
	* crt1/iosym/at90s2343.S: (Dito.)
	* crt1/iosym/at90s4414.S: (Dito.)
	* crt1/iosym/at90s4433.S: (Dito.)
	* crt1/iosym/at90s4434.S: (Dito.)
	* crt1/iosym/at90s8515.S: (Dito.)
	* crt1/iosym/at90s8535.S: (Dito.)
	* crt1/iosym/at90scr100.S: (Dito.)
	* crt1/iosym/at90usb1286.S: (Dito.)
	* crt1/iosym/at90usb1287.S: (Dito.)
	* crt1/iosym/at90usb162.S: (Dito.)
	* crt1/iosym/at90usb646.S: (Dito.)
	* crt1/iosym/at90usb647.S: (Dito.)
	* crt1/iosym/at90usb82.S: (Dito.)
	* crt1/iosym/at94k.S: (Dito.)
	* crt1/iosym/ata6289.S: (Dito.)
	* crt1/iosym/atmega103.S: (Dito.)
	* crt1/iosym/atmega128.S: (Dito.)
	* crt1/iosym/atmega1280.S: (Dito.)
	* crt1/iosym/atmega1281.S: (Dito.)
	* crt1/iosym/atmega1284p.S: (Dito.)
	* crt1/iosym/atmega1284rfr2.S: (Dito.)
	* crt1/iosym/atmega128rfa1.S: (Dito.)